# crawler_software

code_beaglebone/: client_test.c  server.c
code_joystick/: CMakeLists.txt
code_joystick/Joypick/source/: joypick.pro
code_joystick/gui/: mainwindow.ui
code_joystick/include/: MainWindow.h  qjoystick.h
code_joystick/src/: MainWindow.cpp  main.cpp  qjoystick.cpp
code_linkitone/: Crawler_LinkIt.h  Crawler_LinkIt.ino  I2C_CMPS11.cpp  I2C_CMPS11.h  MS5803_14BA_avrlib.cpp  MS5803_14BA_avrlib.h  i2c_functions.cpp  i2c_functions.h  linkit.c
